new destination Rome

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
-        </div>
+            <div class="destination" id="paris">
+                <h3>Rome</h2>
+            </div>
     </div>
 
 </body>
